--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "pinata": "^2.4.9",
+    "qr-scanner": "^1.4.2",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
